# RAG

./: pyproject.toml  requirements.txt
Notes/: rag.txt  rag_pipeline.txt
data/db/: bigCat.blogs.json  bigCat.builders.json
notebook/: document.ipynb  pdf_loader.ipynb
